# sshell

./: Cargo.toml  README.md
docs/: DESIGN.md
examples/: agy_demo.rs  real_agent_demo.rs  run_agy.rs
src/: adapters.rs  dom.rs  hooks.rs  lib.rs
