[package]
name = "sshell"
version = "0.1.0"
edition = "2024"

[dependencies]
portable-pty = "0.8.1"
tokio = { version = "1", features = ["full", "macros"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustyline = "14.0"
reqwest = { version = "0.12", features = ["json"] }
